# jbig2enc

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  autogen.sh  configure.ac  gemini.conf.ac  jbig2pdf.py  jbig2topdf.py  meson.build  new.py  pdf.py  thessalonica-pdf.py
.github/workflows/: Ruff_python_formater.yml  autotools.yaml  c-cpp.yml  cmake.yaml  foobar.yaml  meson.yaml  msys2.yaml  msys2.yml  release.yaml  stale.yml
images/: Readme.md
src/: Makefile.am  jbig2.cc  jbig2arith.cc  jbig2comparator.cc  jbig2enc.cc  jbig2segments.h  jbig2structs.h  jbig2sym.cc
subprojects/: giflib.wrap  zlib-ng.wrap
